--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            chatApp
+            CHATAPP
         </title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
@@ -16,6 +16,8 @@
               send  
             </button>
         </div>
+        <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
+
         <script type="application/javascript" src="chat.js"></script>
     </body>
 </html>
